Mod1, Posicao da casa e texto de apresentacao

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Cachorro</title>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <h1 id="titulo">Ajude o cãozinho a chegar á sua casinha</h1>
 </head>
 <body>
 
